# bookend

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
src/bookend/: __init__.py  __main__.py  arg_handler.py  book.py  book_list.py  bookencoder.py  files.py  index.py  version.py
src/bookend/commands/: __init__.py  add.py  checkout.py  list.py  search.py
src/bookend/data/: logger.ini
src/bookend/files/: config.py  db.py
src/bookend/structure/: book.py  book_list.py
