[metadata]
name = bookend
version = attr: bookend.version.__version__
url = https://github.com/sunarch/bookend
project_urls =
    Bug Tracker = https://github.com/sunarch/bookend/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Topic :: Database :: Front-Ends
    Topic :: Education
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = bookend - Keep track of your books
long_description = file: README.md
long_description_content_type = text/markdown
keywords = book,organize,track
platforms = Any

[options]
install_requires = file: requirements.txt
python_requires = >=3.9
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    bookend = bookend.__main__:main

[options.packages.find]
where = src

[options.package_data]
    bookend = data/logger.ini
